<resources>
    <string name="app_name">menu_Program</string>
    <string name="todo">TODO</string>
    <string name="calculator">Calculator</string>
    <string name="call">Call</string>
    <string name="search">search</string>
    <string name="check">Check</string>
    <string name="cart">Cart</string>
    <string name="s">Search</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="calculator_has_been_selected">Calculator has been selected</string>
    <string name="cart_has_been_selected">Cart has been selected</string>
</resources>