<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/item1"
        android:icon="@drawable/img1"
        android:title="@string/calculator"
        app:showAsAction="never"/>

    <item android:id="@+id/item2"
        android:icon="@drawable/img1"
        android:title="@string/call"
        app:showAsAction="never"/>

    <item android:id="@+id/item3"
        android:icon="@drawable/img1"
        android:title="@string/s"
        app:showAsAction="never"/>

    <item android:id="@+id/item4"
        android:icon="@drawable/img1"
        android:title="@string/check"
        app:showAsAction="never"/>

    <item android:id="@+id/item5"
        android:icon="@drawable/img1"
        android:title="@string/cart"
        app:showAsAction="never"/>







</menu>